fixed several issues, added workforce api, completed from end shift form, updated styling and UI

--- a/src/App.css
+++ b/src/App.css
@@ -50,12 +50,6 @@ nav {
   overflow: hidden;
 }
 
-.navItem {
-  text-decoration: none;
-  color: white;
-  padding: 10px;
-  /* width: 100%; */
-}
 
 
 .navDrop {
@@ -82,6 +76,12 @@ nav {
   margin: 0; /* Important for vertical align on mobile phones */
 }
 
+.navItem {
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+  font-size: 16px;
+}
 .navItem:hover {
   background-color: rgb(189, 61, 61);
 }
@@ -104,14 +104,36 @@ nav {
 }
 
 .shiftReq {
-  border: 1px solid black;
-  margin: 10px 10%;
-  background-color: white;
+  border-bottom: 4px rgba(140, 203, 211, 0.815) solid;
+  margin: 10px 0;
+  background-color: rgba(0, 0, 0, 0.048);
+  padding: 10px;
+  transition: all .3s ease;
+  overflow: hidden;
+  position: relative;
+  display: block;
 }
 
 .shiftReq:hover{
-  background-color: whitesmoke;
+  border-bottom: 8px rgba(140, 203, 211, 0.815) solid;
 }
+
+.shiftReq:hover:after{
+  height: 15%;
+}
+
+.shiftReq:after{
+  content: "";
+  position: absolute;
+  z-index: -1;
+  transition: all .3s ease;
+  left: 0;
+  bottom: 0;
+  height: 0;
+  width: 100%;
+  background: rgba(140, 203, 211, 0.815);
+}
+
 
 .companyReq {
   border: 1px solid black;
@@ -124,10 +146,12 @@ nav {
   background-color: whitesmoke;
 }
 
-.mapContainer{
-  border: 2px solid black;
-  width: 50vw;
-  height: 50vh;
+.map {
+  width: 50%; 
+  height: 100%; 
+  margin:0px auto; 
+  /* display:inline-block; */
+  
 }
 
 .shiftContainer {
@@ -174,4 +198,12 @@ nav {
 
 .positionReq:hover {
   background-color: whitesmoke;
+}
+
+.addShift {
+  text-decoration: none;
+  float: right;
+  font-weight:lighter;
+  font-size: 16px;
+  margin-right: 10%;
 }
